--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Nossa biblioteca do curso de js tdd na pratica",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "./node_modules/.bin/eslint src/*.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,18 @@
   "bugs": {
     "url": "https://github.com/JorleyOliveira/js-tdd-course/issues"
   },
-  "homepage": "https://github.com/JorleyOliveira/js-tdd-course#readme"
+  "homepage": "https://github.com/JorleyOliveira/js-tdd-course#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "husky": "^3.0.9",
+    "typescript": "^3.7.2"
+  },
+  "dependencies": {}
 }
